Initial Fix of Accessibility issues - color contrast

--- a/sweet-shoppe/src/app/pagenotfound/pagenotfound.component.scss
+++ b/sweet-shoppe/src/app/pagenotfound/pagenotfound.component.scss
@@ -50,3 +50,7 @@
      font-weight: 600;
      font-size: 1.3em;
    }
+
+   .text-primary {
+     color: #6f42c1;
+   }
